Implemented get and post methods
